[package]
name = "soc"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
mongodb = "3.2.3"
rocket_db_pools = { version = "0.2.0", features = ["mongodb"] }
futures = "0.3.31"
tokio = "1.44.0"
serde_json = "1.0.140"
dotenv = "0.15.0"
actix = "0.13.5"
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
rand = "0.9.0"
hmac = "0.12.1"
sha2 = "0.10.8"
uuid = "1.16.0"
lazy_static = "1.5.0"
bcrypt = "0.17.0"
